--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CF_API_KEY: ${{ secrets.CF_API_KEY }}
-      WAGO_API_TOKEN: ${{ secrets.WAGO_API_KEY }}
+      #WAGO_API_TOKEN: ${{ secrets.WAGO_API_KEY }}
       GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
